--- a/index.html
+++ b/index.html
@@ -311,25 +311,25 @@
       <div class="row">
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
-            <i class="ri-store-line" style="color: #ffbb2c;"></i>
+            <i class="ri-robot-fill" style="color: #ffbb2c;"></i>
             <h3>AI</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
+            <i class="ri-book-read-fill" style="color: #5578ff;"></i>
             <h3>Reading</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-film-play" style="color: #e80368;"></i>
+            <i class="ri-film-fill" style="color: #e80368;"></i>
             <h3>Motion Pictures</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
-            <i class="ri-music-note-double" style="color: #e361ff;"></i>
+            <i class="ri-music-2-fill" style="color: #e361ff;"></i>
             <h3>Music</h3>
           </div>
         </div>
