--- a/index.html
+++ b/index.html
@@ -94,14 +94,15 @@
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 29 November 1997</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Website:</strong>https://htetmyattun.github.io/</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> 09 79321 5754</li>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Yangon</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> htetmyattun1997@gmail.com</li>
+                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Yangon</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor in Knowledge Engineering</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> htetmyattun1997@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor in Knowledge Engineering, Hons.</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Graduation Date:</strong> November 2019</li>
                 <li><i class="icofont-rounded-right"></i> <strong>University:</strong> University of Information Technology,Yangon</li>
               </ul>
             </div>
@@ -420,57 +421,51 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Sumary</h3>
+          <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
-            <h4>Alice Barkley</h4>
-            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+            <h4>Htet Myat Tun</h4>
+            <p><em>Working in software development environment for 3 years as part time freelancer and 1 year as a full time developer. Also worked as a part time lecturer for 1 year. Good coding skill and know how to develop a useful product from scratch.  </em></p>
             <p>
             <ul>
-              <li>Portland par 127,Orlando, FL</li>
-              <li>(123) 456-7891</li>
-              <li>alice.barkley@example.com</li>
+              <li>(09) 79-3215-754</li>
+              <li>htetmyattun1997@gmail.com</li>
             </ul>
             </p>
           </div>
 
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>Master of Fine Arts &amp; Graphic Design</h4>
-            <h5>2015 - 2016</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-          </div>
-          <div class="resume-item">
-            <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-            <h5>2010 - 2014</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+            <h4>Bachelor of Computer Science  &amp; Knowledge Engineering</h4>
+            <h5>2014 - 2019</h5>
+            <p><em>University of Information Technology,Yangon</em></p>
+            <p>UIT is one of the best computer science universities in Myanmar and I graduated with honors.</p>
           </div>
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>Senior graphic design specialist</h4>
+            <h4>Web Developer</h4>
             <h5>2019 - Present</h5>
-            <p><em>Experion, New York, NY </em></p>
+            <p><em>KBTC College, Yangon</em></p>
+            <p><a href="https:://www.kbtc.edu.mm" target="_blank">kbtc.edu.mm</a></p>
             <p>
             <ul>
-              <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              <li>Lead our small development team with three people while making sure to deliver the product. </li>
+              <li>ALso worked as the part time lecturer at the same college. </li>
+              <li>Already developed some working and currently using web applications and websites.</li>
             </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>Graphic design specialist</h4>
-            <h5>2017 - 2018</h5>
-            <p><em>Stepping Stone Advertising, New York, NY</em></p>
+            <h4>Developer and ML Enthusiast</h4>
+            <h5>2018 - 2019</h5>
+            <p><em>Brillar</em></p>
+            <p><a href="https://www.brillar.io" target="_blank">Brillar.io</a></p>
             <p>
             <ul>
-              <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-              <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-              <li>Recommended and consulted with clients on the most appropriate graphic design</li>
+              <li>Worked 5 months as an intern in Brillar.</li>
+              <li>Mostly specialized in Machine Learning and some Natural Language Processing.</li>
+              <li></li>
               <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
             </ul>
             </p>
