--- a/index.html
+++ b/index.html
@@ -440,33 +440,60 @@
             <p><em>University of Information Technology,Yangon</em></p>
             <p>UIT is one of the best computer science universities in Myanmar and I graduated with honors.</p>
           </div>
+
+          <h3 class="resume-title">Volunteer Work</h3>
+          <div class="resume-item">
+            <h4>Bachelor of Computer Science  &amp; Knowledge Engineering</h4>
+            <h5>2014 - 2019</h5>
+            <p><em>University of Information Technology,Yangon</em></p>
+            <p>UIT is one of the best computer science universities in Myanmar and I graduated with honors.</p>
+          </div>
+
+
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>Web Developer</h4>
+            <h4>Web Developer and Lecturer</h4>
             <h5>2019 - Present</h5>
             <p><em>KBTC College, Yangon</em></p>
-            <p><a href="https:://www.kbtc.edu.mm" target="_blank">kbtc.edu.mm</a></p>
+            <p><a href="https://www.kbtc.edu.mm" target="_blank">kbtc.edu.mm</a></p>
             <p>
             <ul>
               <li>Lead our small development team with three people while making sure to deliver the product. </li>
-              <li>ALso worked as the part time lecturer at the same college. </li>
-              <li>Already developed some working and currently using web applications and websites.</li>
+              <li>ALso worked as the part time lecturer at the same college and KBTC official website is also developed by our team. </li>
+              <li>Already developed working and currently using web applications and websites including the above KBTC website.</li>
             </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>Developer and ML Enthusiast</h4>
+            <h4>Web Developer and ML Enthusiast</h4>
             <h5>2018 - 2019</h5>
             <p><em>Brillar</em></p>
             <p><a href="https://www.brillar.io" target="_blank">Brillar.io</a></p>
             <p>
             <ul>
               <li>Worked 5 months as an intern in Brillar.</li>
-              <li>Mostly specialized in Machine Learning and some Natural Language Processing.</li>
-              <li></li>
-              <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              <li>Mostly specialized in Machine Learning and  Natural Language Processing.</li>
+              <li>Participate in deveoping some ML models for local and international companies.</li>
+            </ul>
+            </p>
+            <p><em>Hydroplant</em></p>
+            <p><a href="https://hydroplantmm.com/" target="_blank">Hydroplant Company Website</a></p>
+            <p>
+            <ul>
+              <li>Worked as a freelancer for developing web application to control IOT devices.</li>
+              <li>Got much experience about connecting IOT and web application.</li>
+            </ul>
+            </p>
+          </div>
+            <div class="resume-item">
+            <h4>2017-2018</h4>
+            <p>
+            <ul>
+              <li>Developed a bitcoin exchanged information website for a customer in Singapore.</li>
+              <li>Developed inventory control,staff control,sales and financing web application for Nay Chi Oo Clinic.</li>
+              <li>Worked as a short time intern at the Information Matrix Company.</li>
             </ul>
             </p>
           </div>
@@ -488,49 +515,49 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
-            <div class="icon"><i class="bx bxl-dribbble"></i></div>
-            <h4><a href="">Lorem Ipsum</a></h4>
-            <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+            <div class="icon"><i class="bx bx-world"></i></div>
+            <h4><a href="">Web Applications</a></h4>
+            <p>Web applications are most in demands projects and I have a certain amount of proficiency in this area.</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-file"></i></div>
-            <h4><a href="">Sed ut perspiciatis</a></h4>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+            <div class="icon"><i class="bx bx-desktop"></i></div>
+            <h4><a href="">Java Application</a></h4>
+            <p>I have some experience in developing Java applications and I have good knowledge in SQL and derby too.</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-tachometer"></i></div>
-            <h4><a href="">Magni Dolores</a></h4>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+            <div class="icon"><i class="bx bx-message-detail"></i></div>
+            <h4><a href="">Static Websites</a></h4>
+            <p>I can also provide static websites for showing certain information.</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-world"></i></div>
-            <h4><a href="">Nemo Enim</a></h4>
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+            <div class="icon"><i class="bx bx-book-reader"></i></div>
+            <h4><a href="">NLP ralated Jobs</a></h4>
+            <p>I am interested in this area and I just want to do anything related with this field.</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-slideshow"></i></div>
-            <h4><a href="">Dele cardo</a></h4>
-            <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+            <div class="icon"><i class="bx bx-pencil"></i></div>
+            <h4><a href="">Teaching</a></h4>
+            <p>I can clearly explain the concepts of some programming languages and background theories. I have done writing course contents for a college,too.</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-arch"></i></div>
-            <h4><a href="">Divera don</a></h4>
-            <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+            <div class="icon"><i class="bx bxs-bot"></i></div>
+            <h4><a href="">IOT Projects</a></h4>
+            <p>I can work on IOT projects too if I was put into and I am interested in this area, too.</p>
           </div>
         </div>
 
