--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
-            <h4>Htet Myat Tun</h4>
+            <h4>About Me</h4>
             <p><em>Working in software development environment for 3 years as part time freelancer and 1 year as a full time developer. Also worked as a part time lecturer for 1 year. Good coding skill and know how to develop a useful product from scratch.  </em></p>
             <p>
             <ul>
@@ -443,12 +443,16 @@
 
           <h3 class="resume-title">Volunteer Work</h3>
           <div class="resume-item">
-            <h4>Bachelor of Computer Science  &amp; Knowledge Engineering</h4>
-            <h5>2014 - 2019</h5>
-            <p><em>University of Information Technology,Yangon</em></p>
-            <p>UIT is one of the best computer science universities in Myanmar and I graduated with honors.</p>
+            <h4>Assistant in writing research paper</h4>
+            <h5>2019</h5>
+            <p><em>Paper name</em></p>
+            <p>Paper was submitted in [date] and accepted by [university name] and it will be printed in the book,[book_name] by Springer Publishing.</p>
           </div>
-
+          <div class="resume-item">
+            <h4>Tour Guide for Singapore Polytechnic students</h4>
+            <h5>2016</h5>
+            <p>This was a 14 days program for young students from Singapore and Myanmar to be more socialized.</p>
+          </div>
 
         </div>
         <div class="col-lg-6">
@@ -557,7 +561,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bxs-bot"></i></div>
             <h4><a href="">IOT Projects</a></h4>
-            <p>I can work on IOT projects too if I was put into and I am interested in this area, too.</p>
+            <p>I can work on IOT projects too if I was put into one and I am interested in this area, too.</p>
           </div>
         </div>
 
