--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 29 November 1997</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong>https://htetmyattun.github.io/</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> 09 79321 5754</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> htetmyattun1997@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong><a href="https://htetmyattun.github.io"> https://htetmyattun.github.io/</a></li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> <a href="tel:09793215754"> 09 79 321 5754</a></li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong><a href="mailto:htetmyattun1997@gmail.com"> htetmyattun1997@gmail.com</a></li>
                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Yangon</li>
               </ul>
             </div>
@@ -439,7 +439,9 @@
             <h5>2014 - 2019</h5>
             <p><em>University of Information Technology,Yangon</em></p>
             <p>UIT is one of the best computer science universities in Myanmar and I graduated with honors.</p>
+
           </div>
+
 
           <h3 class="resume-title">Volunteer Work</h3>
           <div class="resume-item">
@@ -453,6 +455,30 @@
             <h5>2016</h5>
             <p>This was a 14 days program for young students from Singapore and Myanmar to be more socialized.</p>
           </div>
+
+          <h3 class="resume-title">University Projects and Paper</h3>
+          <div class="resume-item">
+            <h4>As a student from UIT, we have to do a lot of projects in our years at university.</h4>
+            <p>
+              These are highlighted projects that were selected for university's yearly project show. I was a team leader in first three years and member in fourth year.
+              <ul>
+                <li>In first year,me and other 7 members developed a calcular for digital computing with C and C++.</li>
+                <li>
+                  In second year,11 of us tried to a write a moodle look-alike program with java.
+                </li>
+                <li>
+                  In third year,clinic management system is developed by 6 of us.
+                </li>
+                <li>
+                  In fourth year,I am part of the team which develop a machine learning model for translating signed language photo to text.
+                </li>
+                <li>In final year,I tried to do a research in semantic searching with my own algorithm for ontology. My paper was graded 'A'.</li>
+              </ul>
+            </p>
+            
+          </div>
+
+          
 
         </div>
         <div class="col-lg-6">
@@ -529,7 +555,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bx-desktop"></i></div>
             <h4><a href="">Java Application</a></h4>
-            <p>I have some experience in developing Java applications and I have good knowledge in SQL and derby too.</p>
+            <p>I have some experience in developing Java applications and I have good knowledge in SQL and derby.</p>
           </div>
         </div>
 
@@ -738,7 +764,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>A108 Adam Street, New York, NY 535022</p>
+            <p>Sabel Chan 2<sup>nd</sup> Street,Hlaing Township (Yangon)</p>
           </div>
         </div>
 
@@ -760,14 +786,14 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>contact@example.com</p>
+            <p><a href="mailto:htetmyattun1997@gmail.com">htetmyattun1997@gmail.com</a></p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <p>+1 5589 55488 55</p>
+            <p><a href="tel:09793215754">+95 979 321 5754</a></p>
           </div>
         </div>
       </div>
