--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                   In second year,11 of us tried to a write a moodle look-alike program with java.
                 </li>
                 <li>
-                  In third year,clinic management system is developed by 6 of us.
+                  In third year,clinic management system is developed by 6 students including me.
                 </li>
                 <li>
                   In fourth year,I am part of the team which develop a machine learning model for translating signed language photo to text.
