--- a/index.html
+++ b/index.html
@@ -447,8 +447,8 @@
           <div class="resume-item">
             <h4>Assistant in writing research paper</h4>
             <h5>2019</h5>
-            <p><em>Paper name</em></p>
-            <p>Paper was submitted in [date] and accepted by [university name] and it will be printed in the book,[book_name] by Springer Publishing.</p>
+            <p><em>Digital Indentity Management System Using Blockchain Technology</em></p>
+            <p>Paper was submitted and accepted by the conference in India and it will be printed in the book published by Springer Publishing.</p>
           </div>
           <div class="resume-item">
             <h4>Tour Guide for Singapore Polytechnic students</h4>
