--- a/portfolio-detail3.html
+++ b/portfolio-detail3.html
@@ -40,31 +40,31 @@
   <main id="main">
 
     <!-- ======= Portfolio Details ======= -->
-    <div id="portfolio-details" class="portfolio-details">
+    <div id="portfolio-detail1" class="portfolio-details">
       <div class="container">
 
         <div class="row">
 
           <div class="col-lg-8">
             <h2 class="portfolio-title">This is an example of portfolio detail</h2>
-            <div class="owl-carousel portfolio-details-carousel">
-              <img src="assets/img/portfolio/portfolio-details-1.jpg" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/portfolio-details-2.jpg" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/portfolio-details-3.jpg" class="img-fluid" alt="">
+            <div class="owl-carousel portfolio-details-carousel" style="width:178;">
+              <img src="assets/img/portfolio/portfolio-31.jpg" alt="" >
+              <img src="assets/img/portfolio/portfolio-32.jpg" alt="">
+              <img src="assets/img/portfolio/portfolio-33.jpg" alt="" >
             </div>
           </div>
 
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
-              <li><strong>Client</strong>: ASU Company</li>
-              <li><strong>Project date</strong>: 01 March, 2020</li>
-              <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+              <li><strong>Category</strong>: Web Development with IOT</li>
+              <li><strong>Client</strong>: Hydroplant Company</li>
+              <li><strong>Project year</strong>: 2019</li>
+              <li><strong>Project URL</strong>: <a href="https://www.hydroplantiot.com/">www.hydroplantiot.com</a></li>
             </ul>
 
             <p>
-              Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+             I developed this project in 2019 and it is strongly depended on IOT technology. It includes getting data from various sensors and showing them on the client's web user interface. It also shows each individual's device information in their separated graph. Admin team can monitor the user's informations and adding new users and connecting them with the IOT device.
             </p>
           </div>
 
