--- a/portfolio-detail3.html
+++ b/portfolio-detail3.html
@@ -46,7 +46,7 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">This is an example of portfolio detail</h2>
+            <h2 class="portfolio-title">Portfolio detail</h2>
             <div class="owl-carousel portfolio-details-carousel" style="width:178;">
               <img src="assets/img/portfolio/portfolio-31.jpg" alt="" >
               <img src="assets/img/portfolio/portfolio-32.jpg" alt="">
@@ -57,14 +57,14 @@
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web Development with IOT</li>
-              <li><strong>Client</strong>: Hydroplant Company</li>
+              <li><strong>Category</strong>: Web Application</li>
+              <li><strong>Client</strong>: Baby Ancestor Company</li>
               <li><strong>Project year</strong>: 2019</li>
-              <li><strong>Project URL</strong>: <a href="https://www.hydroplantiot.com/">www.hydroplantiot.com</a></li>
+              <li><strong>Project URL</strong>: Local Host</li>
             </ul>
 
             <p>
-             I developed this project in 2019 and it is strongly depended on IOT technology. It includes getting data from various sensors and showing them on the client's web user interface. It also shows each individual's device information in their separated graph. Admin team can monitor the user's informations and adding new users and connecting them with the IOT device.
+             This is the customized POS software for Baby Ancestor company.It includes inventory management,crm management,finance,driving records,payabale and receivable,stuff management and customer management features.
             </p>
           </div>
 
