--- a/portfolio-detail5.html
+++ b/portfolio-detail5.html
@@ -46,7 +46,7 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">This is an example of portfolio detail</h2>
+            <h2 class="portfolio-title">Portfolio detail</h2>
             <div class="owl-carousel portfolio-details-carousel" style="width:178;">
               <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="" width="176" height="291">
               <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="" width="176" height="291">
