--- a/portfolio-detail1.html
+++ b/portfolio-detail1.html
@@ -46,7 +46,7 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">This is an example of portfolio detail</h2>
+            <h2 class="portfolio-title">Portfolio detail</h2>
             <div class="owl-carousel portfolio-details-carousel" style="width:178;">
               <img src="assets/img/portfolio/portfolio-11.jpg" alt="">
               <img src="assets/img/portfolio/portfolio-12.jpg" alt="">
