--- a/portfolio-detail4.html
+++ b/portfolio-detail4.html
@@ -46,25 +46,25 @@
         <div class="row">
 
           <div class="col-lg-8">
-            <h2 class="portfolio-title">This is an example of portfolio detail</h2>
+            <h2 class="portfolio-title">Portfolio detail</h2>
             <div class="owl-carousel portfolio-details-carousel" style="width:178;">
-              <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="" width="176" height="291">
-              <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="" width="176" height="291">
-              <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="" width="176" height="291">
+              <img src="assets/img/portfolio/portfolio-51.jpg" alt="" >
+              <img src="assets/img/portfolio/portfolio-52.jpg" alt="" >
+              <img src="assets/img/portfolio/portfolio-53.jpg" alt="" >
             </div>
           </div>
 
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web Development with IOT</li>
-              <li><strong>Client</strong>: Hydroplant Company</li>
-              <li><strong>Project year</strong>: 2019</li>
-              <li><strong>Project URL</strong>: <a href="https://www.hydroplantiot.com/">www.hydroplantiot.com</a></li>
+              <li><strong>Category</strong>: Website</li>
+              <li><strong>Client</strong>: Knowledge Box Training Center</li>
+              <li><strong>Project year</strong>: 2020</li>
+              <li><strong>Project URL</strong>: <a href="https://www.kbtc.edu.mm/">www.kbtc.edu.mm</a></li>
             </ul>
 
             <p>
-             I developed this project in 2019 and it is strongly depended on IOT technology. It includes getting data from various sensors and showing them on the client's web user interface. It also shows each individual's device information in their separated graph. Admin team can monitor the user's informations and adding new users and connecting them with the IOT device.
+             Official Website for KBTC College. For showing college related information and admin panel for cerificates checking.
             </p>
           </div>
 
