--- a/portfolio-detail7.html
+++ b/portfolio-detail7.html
@@ -48,23 +48,22 @@
           <div class="col-lg-8">
             <h2 class="portfolio-title">This is an example of portfolio detail</h2>
             <div class="owl-carousel portfolio-details-carousel" style="width:178;">
-              <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="" width="176" height="291">
-              <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="" width="176" height="291">
-              <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="" width="176" height="291">
+              <img src="assets/img/portfolio/portfolio-6.png" alt="" width="176" height="291">
+              
             </div>
           </div>
 
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web Development with IOT</li>
-              <li><strong>Client</strong>: Hydroplant Company</li>
-              <li><strong>Project year</strong>: 2019</li>
-              <li><strong>Project URL</strong>: <a href="https://www.hydroplantiot.com/">www.hydroplantiot.com</a></li>
+              <li><strong>Category</strong>: Web Application</li>
+              <li><strong>Client</strong>: Nay Chi Oo Clinic</li>
+              <li><strong>Project year</strong>: 2018</li>
+              <li><strong>Project URL</strong>: Local Web Application</li>
             </ul>
 
             <p>
-             I developed this project in 2019 and it is strongly depended on IOT technology. It includes getting data from various sensors and showing them on the client's web user interface. It also shows each individual's device information in their separated graph. Admin team can monitor the user's informations and adding new users and connecting them with the IOT device.
+            Developed this for Naychioo Clinic.
             </p>
           </div>
 
